--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "leva": "^0.9.23",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-dropzone": "^12.1.0",
+    "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
