--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   },
   "dependencies": {
     "leva": "^0.9.23",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-dropzone": "^12.1.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-dropzone": "14.2.0",
     "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
+    "@vitejs/plugin-react": "1.3.2",
     "sass": "^1.51.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.5"
+    "typescript": "4.6.4",
+    "vite": "2.9.7"
   }
 }
