--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "leva": "^0.9.23",
+    "jotai": "^1.6.7",
+    "leva": "0.9.27",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-dropzone": "14.2.0",
+    "react-dropzone": "14.2.1",
     "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.5",
     "@vitejs/plugin-react": "1.3.2",
-    "sass": "^1.51.0",
-    "typescript": "4.6.4",
-    "vite": "2.9.7"
+    "sass": "1.52.1",
+    "typescript": "4.7.2",
+    "vite": "2.9.9"
   }
 }
